--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="{{ " @ " | append: site.data.vitaliy.twitter_username }}">
+    <meta name="twitter:site" content="{{ "@" | append: site.data.vitaliy.twitter_username }}">
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{{ site.description }}">
     <meta name="twitter:image:src" content="{{ site.data.vitaliy.twitter_image | prepend: site.baseurl | prepend: site.url }}">
@@ -17,32 +17,32 @@
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta property="og:site_name" content="{{ site.title }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ site.url }}" />
+    <meta property="og:url" content="{{ site.url | append: site.baseurl }}" />
     <meta property="og:image" content="{{ site.data.vitaliy.facebook_image | prepend: site.baseurl | prepend: site.url }}" />
     <meta property="og:description" content="{{ site.description }}" />
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta name="google-site-verification" content="{{ site.webtools_site_verification }}" />
 
-    <link rel="shortcut icon" href="{{ " favicon.ico " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="152x152" href="{{ " apple-touch-icon-152x152.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ " apple-touch-icon-144x144.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="120x120" href="{{ " apple-touch-icon-120x120.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ " apple-touch-icon-114x114.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ " apple-touch-icon-76x76.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ " apple-touch-icon-72x72.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="60x60" href="{{ " apple-touch-icon-60x60.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="57x57" href="{{ " /apple-touch-icon-57x57.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{ " favicon-196x196.png " sizes="196x196 " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{ " favicon-160x160.png " sizes="160x160 " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{ " favicon-96x96.png " sizes="96x96 " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{ " /favicon-32x32.png " sizes="32x32 " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{ " favicon-16x16.png " sizes="16x16 " | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ "favicon.ico " | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ "apple-touch-icon-152x152.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ "apple-touch-icon-144x144.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ "apple-touch-icon-120x120.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ "apple-touch-icon-114x114.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ "apple-touch-icon-76x76.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ "apple-touch-icon-72x72.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ "apple-touch-icon-60x60.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ "apple-touch-icon-57x57.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "favicon-196x196.png" sizes="196x196" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "favicon-160x160.png" sizes="160x160" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "favicon-96x96.png" sizes="96x96" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" sizes="32x32" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "favicon-16x16.png" sizes="16x16" | prepend: site.favicon_folder | prepend: site.baseurl }}">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-TileImage" content="{{ " mstile-144x144.png " | prepend: site.favicon_folder | prepend: site.baseurl }}">
-    <meta name="msapplication-config" content="{{ " browserconfig.xml " | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <meta name="msapplication-TileImage" content="{{ "mstile-144x144.png" | prepend: site.favicon_folder | prepend: site.baseurl }}">
+    <meta name="msapplication-config" content="{{ "browserconfig.xml" | prepend: site.favicon_folder | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
