--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -35,8 +35,7 @@ layout: compress
     <script>
     window.jQuery || document.write('<script src="{{ "/js/jquery-2.1.1.min.js" | prepend: site.baseurl }}"><\/script>')
     </script>
-    <script src="{{ "/js/jquery.appear.min.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/default.js" | prepend: site.baseurl }}"></script>
 </body>
 
 </html>
