--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,7 +1,7 @@
 {% for post in site.posts %}
 <article class="post col-md-12">
     <h1 class="post-title">
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
     </h1>
     <div class="post-metadata">
         <span class="post-date">{{ post.date | date: "%B %-d, %Y" }}</span>
@@ -9,7 +9,7 @@
     {% if post.image %}<img class='img-responsive' src='{{ post.image | prepend: site.data.vitaliy.images_folder | prepend: site.baseurl }}'>{% endif %}
     <p class="post-content">
         {{ post.content | strip_html | truncate: 750 }}<br>
-        <a class="post-read-more" href="{{ post.url }}">read more</a>
+        <a class="post-read-more" href="{{ post.url | prepend: site.baseurl }}">read more</a>
     </p>
     <div class="dash"></div>
 </article>
