--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,9 +1,16 @@
-<article class="post col-md-12">
-    <h1 class="post-title">{{ page.title }}</h1>
+<article class="post col-md-12" itemscope itemtype="http://schema.org/Article">
+    <span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%B %-d, %Y" }}</span>
+    <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
     <div class="post-metadata">
-        <span class="post-date">{{ page.date | date: "%B %-d, %Y" }}</span>
+        <ul class="post-categories">Categories:
+			{% for category in page.categories %}
+			<li>
+				<a href="" title="{{ category }}">{{ category }}</a>
+			</li>
+			{% endfor %}
+        </ul>
     </div>
-    <p class="post-content">
+    <p class="post-content" itemprop="articleBody">
         {{ content }}<br>
     </p>
     <div class="dash"></div>
