--- a/_sass/partials/sections/_navigation.scss
+++ b/_sass/partials/sections/_navigation.scss
@@ -24,23 +24,23 @@
     }
     li {
         display: block;
-        transform: translate(-500px, 0);
+        transform: translateX(-500px);
         transition: transform .8s;
         transition-timing-function: cubic-bezier(.7, 0, .3, 1);     
         &:nth-child(2) {
-            transform: translate(-1000px, 0);
+            transform: translateX(-1000px);
         }
         &:nth-child(3) {
-            transform: translate(-1500px, 0);
+            transform: translateX(-1500px);
         }
         &:nth-child(4) {
-            transform: translate(-2000px, 0);
+            transform: translateX(-2000px);
         }
         &:nth-child(5) {
-            transform: translate(-2500px, 0);
+            transform: translateX(-2500px);
         }
         &:nth-child(6) {
-            transform: translate(-3000px, 0);
+            transform: translateX(-3000px);
         }
     }
     .nav-link {
@@ -49,9 +49,19 @@
         color: #7f7f7f;
         outline: 0;
         font-size: 16px;
-        transition: color .8s;
+        transition: transform .8s, color .8s;
+        &.current {
+            color: #cccccc;    
+            &:hover {
+                transform: translateX(0);
+            }
+        }
         &:hover {
-            color: #cccccc;
+            @extend .current;
+            transform: translateX(10px);
+        }
+        &.sub-nav {
+            padding-left: 55px;
         }
     }
     .st-menu-open & {
@@ -72,8 +82,8 @@
         background: #f5f5f5;
         .nav-link {
             color: #666666;
-            &:hover {
-                color: #404040;
+            &:hover, &.current {
+                color: #0D0D0D;
             }
         }
     }
