--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
     <meta name="msapplication-config" content="{{ "browserconfig.xml" | prepend: site.favicon_folder | prepend: site.baseurl }}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    
+    {% css_asset_tag %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
