Restructured project. Modified blog page.

--- a/_assets/stylesheets/blog.css.scss
+++ b/_assets/stylesheets/blog.css.scss
@@ -7,8 +7,8 @@
 
 // Partialsas
 @import "partials/blog/global";
-@import "partials/helper";
-@import "partials/sprites";
+@import "partials/blog/helper";
 @import "partials/blog/header";
+@import "partials/blog/article-list";
 @import "partials/blog/article";
 @import "partials/blog/footer";
