--- a/_assets/stylesheets/partials/blog/_footer.scss
+++ b/_assets/stylesheets/partials/blog/_footer.scss
@@ -1,5 +1,9 @@
 .footer-container {
 	background: $header-color;
+	margin-top: 120px;
+	@media (max-width: 767px) {
+        margin-top: 60px;
+    }
 }
 .footer {
 	padding: 70px 15px 30px;
