--- a/_includes/index/head.html
+++ b/_includes/index/head.html
@@ -25,7 +25,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta name="google-site-verification" content="{{ site.webtools_site_verification }}" />
     
-    {% include meta/icons.html %}
+    {% include meta/favicons.html %}
 
     {% stylesheet styles %}
 
