--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+{% include index/head.html %}
 
 <body>
     <div id="st-container" class="container-fluid st-container">
 
-        {% include navigation.html %}
+        {% include index/navigation.html %}
 
         <div class="st-pusher">
             <div class="st-content">
