--- a/_assets/stylesheets/styles.css.scss
+++ b/_assets/stylesheets/styles.css.scss
@@ -1,20 +1,20 @@
 // Modules and Variables
-@import "partials/base";
+@import "partials/index/base";
 
 // Third-party
 @import "vendor/bootstrap-custom";
 @import "vendor/animate-sass/animate";
 
 // Partialsas
-@import "partials/global";
-@import "partials/helper";
-@import "partials/sprites";
-@import "partials/sections/header";
-@import "partials/sections/navigation";
+@import "partials/index/global";
+@import "partials/index/helper";
+@import "partials/index/sprites";
+@import "partials/index/sections/header";
+@import "partials/index/sections/navigation";
 
 // Sections
-@import "partials/sections/landing";
-@import "partials/sections/about-me";
-@import "partials/sections/focusing";
-@import "partials/sections/work-experience";
-@import "partials/sections/footer";
+@import "partials/index/sections/landing";
+@import "partials/index/sections/about-me";
+@import "partials/index/sections/focusing";
+@import "partials/index/sections/work-experience";
+@import "partials/index/sections/footer";
