--- a/_includes/blog/head.html
+++ b/_includes/blog/head.html
@@ -28,9 +28,9 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "/feed.xml" | prepend: site.baseurl }}">
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title | append: " &#8226; " | append: site.title }}{% else %}{{ site.title }}{% endif %}</title>
     
-    {% include meta/icons.html %}
+    {% include meta/favicons.html %}
 
     {% stylesheet blog %}
 
