My stuff on the web

--- a/_assets/stylesheets/blog.css.scss
+++ b/_assets/stylesheets/blog.css.scss
@@ -9,6 +9,6 @@
 @import "partials/blog/global";
 @import "partials/blog/helper";
 @import "partials/blog/header";
-@import "partials/blog/article-list";
+@import "partials/blog/blog";
 @import "partials/blog/article";
 @import "partials/blog/footer";
