--- a/_includes/blog/article-list.html
+++ b/_includes/blog/article-list.html
@@ -23,6 +23,21 @@
     {% endfor %}
     </ul>
 </div>
-<div class="col-md-5 col-md-offset-1">
-
+<hr class="visible-xs">
+<div class="on-web col-md-5 col-md-offset-1">
+    <h5>My stuff on the web</h5>
+    <ul>
+    {% for item in site.data.vitaliy-on-web.list reversed limit:5 %}
+        <li class="on-web-item">
+            <a href="{{ item.link }}">
+                <h6 class="on-web-title">{{ item.title }}</h6>
+                <p class="on-web-detail">
+                    <span class="source-name">{{ item.source-name}}</span> 
+                    <span class="divider">//</span>
+                    <span class="type">{{ item.type }}</span>
+                </p>
+            </a>
+        </li>
+    {% endfor %}
+    </ul>
 </div>
