Updated post template. Added post about android form validation

--- a/_assets/stylesheets/partials/blog/_article.scss
+++ b/_assets/stylesheets/partials/blog/_article.scss
@@ -4,6 +4,12 @@
 		margin: 30px auto;
 		@extend .img-responsive;
 	}
+	h4 {
+		margin-top: 30px;
+	}
+	h5 {
+		margin-top: 20px;	
+	}
 }
 .article-header {
 	margin-bottom: 40px;
