On web page. Note and quote highlight in articles, new style for inline code.

--- a/_assets/stylesheets/blog.css.scss
+++ b/_assets/stylesheets/blog.css.scss
@@ -12,3 +12,5 @@
 @import "partials/blog/blog";
 @import "partials/blog/article";
 @import "partials/blog/footer";
+
+@import "partials/on-web/on-web-list";
