--- a/_assets/stylesheets/partials/blog/_base.scss
+++ b/_assets/stylesheets/partials/blog/_base.scss
@@ -21,11 +21,12 @@ $h6-font-size: 1.1 * $base-font-size;
 
 // Colors
 $main-color: #FF9900;
+$main-color-second: #88CED7;
 $sub-color: #FFB240;
+$sub-color-second: #6BA2A9;
 $header-color: #333333;
 $text-color: #666666;
 $sub-text-color: #999999;
-$icon-fill-color: $text-color;
 $link-lighten-amount: 20%;
 
 // Path
