--- a/_includes/blog/blog.html
+++ b/_includes/blog/blog.html
@@ -25,7 +25,7 @@
 </div>
 <hr class="visible-xs">
 <div class="on-web col-md-5 col-md-offset-1">
-    <h5>My stuff on the web</h5>
+    <h5>{{ site.data.vitaliy-on-web.block_title }}</h5>
     <ul>
     {% for item in site.data.vitaliy-on-web.list reversed limit:5 %}
         <li class="on-web-item">
@@ -40,4 +40,5 @@
         </li>
     {% endfor %}
     </ul>
+    <a class="side-link" href="{{ "/me-on-web/" || prepend: site.baseurl }}">See all</a>
 </div>
