--- a/_includes/blog/navigation.html
+++ b/_includes/blog/navigation.html
@@ -1,6 +1,6 @@
 <header class="header">
     <a class="logo-header" href="{{ "/" | prepend: site.baseurl }}">
-        <img src="{{ "/img/vitaliy/logo.svg" | prepend: site.baseurl }}" alt="{{ site.data.vitaliy.name | append: " " | append: site.data.vitaliy.surname}}" height="100px">
+        <img src="{{ "/img/vitaliy/logo.svg" | prepend: site.baseurl }}" alt="{{ site.data.vitaliy.name | append: " " | append: site.data.vitaliy.surname}}" height="100px" width="102px">
     </a>
     <nav class="nav">
         <ul>
@@ -8,7 +8,7 @@
                 {% if nav.major == null or nav.major == page.permalink %}
                 <li>
                     {% assign navlink = nav.permalink | prepend: site.baseurl %}
-                    <a class="nav-link {% if nav.permalink == "/blog/" %}current{% endif %} {{ nav.class }}" href="{{ navlink }}" {% if nav.link %}target="_blank"{% endif %}>{{ nav.text }}</a>
+                    <a class="nav-link {% if nav.permalink == page.permalink %}current{% endif %} {{ nav.class }}" href="{{ navlink }}" {% if nav.link %}target="_blank"{% endif %}>{{ nav.text }}</a>
                 </li>
                 {% endif %}
             {% endfor %}
