Fixed navigation on small devices. Removed ability to change theme color for android 5+

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -9,7 +9,7 @@ layout: compress
 
 <body>
     <div class="container">
-        {% include blog/navigation.html %}
+        {% include blog/header.html %}
     </div>
 
     <div class="article-header container-fluid">
