--- a/_assets/stylesheets/partials/blog/_header.scss
+++ b/_assets/stylesheets/partials/blog/_header.scss
@@ -9,7 +9,6 @@
     margin: 0 60px;
     @media (max-width: 767px) {
         display: block;
-        margin-bottom: 10px;
     }
     img {
         margin: 0 auto;
@@ -33,15 +32,20 @@
     li {
         display: inline-block;
         margin: 0 12px;
+        @media (max-width: 767px) {
+            line-height: 220%;
+        }
     }
     .nav-link {
         padding: 0 2px 8px;
         outline: 0;
         font-size: 16px;
-        transition: color .8s;
         color: $text-color;
         &.current {
             border-bottom: 3px solid $main-color;
+        }
+        @media (max-width: 767px) {
+            padding-bottom: 4px;
         }
     }
 }
