--- a/_includes/blog/head.html
+++ b/_includes/blog/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="google-site-verification" content="{{ site.webtools_site_verification }}" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0">
-    <meta name="theme-color" content="{% if page.theme_color %}{{ page.theme_color }}{% else %}#FF9900{% endif %}">
+    <meta name="theme-color" content="#FF9900">
    
     <meta name="author" content="{{ page.author }}">
     <meta itemprop="name" content="{{ page.title }}">
