--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,7 @@ layout: compress
 
 <body>
     <div class="container">
-        {% include blog/navigation.html %}
+        {% include blog/header.html %}
     </div>
 
     <div class="article-header container-fluid">
