--- a/_assets/stylesheets/partials/blog/_article.scss
+++ b/_assets/stylesheets/partials/blog/_article.scss
@@ -1,17 +1,54 @@
 .article {
 	float: none;
+	line-height: 1.6em;
+  h1, h2, h3, h4, h5, h6  { 
+  	margin-bottom: 14px; 
+  	font-weight: $bold - 100; 
+  	line-height: 1.3em; 
+  }
+  h1 { font-size: 2.2em; letter-spacing: -1px; }
+  h2 { font-size: 1.9em; letter-spacing: -0.7px; }
+  h3 { font-size: 1.6em; letter-spacing: -0.5px; }
+  h4 { font-size: 1.4em; letter-spacing: -0.3px; }
+  h5 { font-size: 1.2em; font-weight: $bold; }
+  h6 { font-size: 1em; font-weight: $bold; text-transform: uppercase; }
+  p { 
+  	margin-bottom: 1em; 
+  }
+  ol, ul { 
+  	margin: 0 0 15px 30px; 
+  }
+  ol ol, ol ul, ul ul, ul ol { 
+  	margin-bottom: 0; 
+  }
+  li { 
+  	margin: 0; 
+  }
+  blockquote { 
+  	position: relative; 
+  	color: #777; 
+  	font-style: italic; 
+  	margin: 0 0 20px 0; 
+  	padding-left: 50px; 
+  	border: 0px; 
+  }
+  blockquote p { 
+  	margin-bottom: 0.75em; 
+  }
+  blockquote:before { 
+  	content: "\f10d"; 
+  	color: #ccc; 
+  	font-size: 32px; 
+  	font-style: normal; 
+  	font-family: FontAwesome; 
+  	text-align: center; 
+  	position: absolute; 
+  	left: 0; 
+  	top: 0; 
+  }
 	img {
 		margin: 30px auto;
 		@extend .img-responsive;
-	}
-	h4 {
-		margin-top: 30px;
-	}
-	h5 {
-		margin-top: 20px;	
-	}
-	h6 {
-		margin-top: 20px;	
 	}
 	.note {
 		margin: 25px 15px;
