--- a/_assets/stylesheets/partials/blog/_global.scss
+++ b/_assets/stylesheets/partials/blog/_global.scss
@@ -25,6 +25,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
     font-weight: $header-font-weight;
     display: block;
+    word-wrap: break-word;
 }
 h1 {
     font-size: $h1-font-size;
