--- a/_assets/stylesheets/partials/blog/_article.scss
+++ b/_assets/stylesheets/partials/blog/_article.scss
@@ -48,6 +48,8 @@
   }
 	img {
 		margin: 30px auto;
+    border-radius: 3px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 		@extend .img-responsive;
 	}
 	.note {
